--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "lucide-react": "^0.486.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "sonner": "^2.0.3",
