--- a/client/package.json
+++ b/client/package.json
@@ -33,9 +33,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@tailwindcss/vite": "^4.0.17",
+    "@types/babel__traverse": "^7.20.7",
+    "@types/domhandler": "^2.4.5",
+    "@types/uuid": "^10.0.0",
     "@uiw/react-codemirror": "^4.23.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "domhandler": "^5.0.3",
     "lucide-react": "^0.486.0",
     "next-themes": "^0.4.6",
     "re-resizable": "^6.11.2",
@@ -49,10 +53,15 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/parser": "^7.27.0",
+    "@babel/traverse": "^7.27.0",
+    "@babel/types": "^7.27.0",
     "@eslint/js": "^9.21.0",
+    "@types/htmlparser2": "^3.10.7",
     "@types/node": "^22.13.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
