--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
     "@tailwindcss/vite": "^4.0.17",
     "@types/babel__traverse": "^7.20.7",
     "@types/domhandler": "^2.4.5",
@@ -48,6 +49,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-resizable-panels": "^2.1.7",
     "react-split-pane": "^0.1.92",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
