--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.4.1",
     "react-split-pane": "^0.1.92",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
