--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,34 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/archiver": "^6.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/csso": "^5.0.4",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mime-types": "^2.1.4",
+    "@types/ms": "^2.1.0",
+    "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
+    "archiver": "^7.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csso": "^5.0.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
+    "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "sharp": "^0.33.5",
+    "terser": "^5.39.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
