--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,12 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
+    // "rootDir": "./src", // Remove rootDir to allow imports from outside src
+    "baseUrl": "./", // Keep baseUrl
+    "paths": { // Keep paths alias
+      "@config/*": ["config/*"],
+      "@/*": ["src/*"] // Optional: alias for src directory
+    },
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
