--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "@types/pg": "^8.11.11",
+    "@types/terser": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
