--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "@types/domhandler": "^2.4.5",
     "@types/uuid": "^10.0.0",
     "@uiw/react-codemirror": "^4.23.10",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "domhandler": "^5.0.3",
