--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "prestart": "npm run build"
-  },
+    "scripts": {
+       "build": "tsc",
+       "start": "node dist/index.js",
+       "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
+       "prestart": "npm run build"
+     },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "@types/csso": "^5.0.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mime-types": "^2.1.4",
+    "@types/morgan": "^1.9.9",
     "@types/ms": "^2.1.0",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
@@ -32,6 +33,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
+    "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
@@ -41,7 +43,8 @@
     "sharp": "^0.33.5",
     "terser": "^5.39.0",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -50,6 +53,8 @@
     "@types/pg": "^8.11.11",
     "@types/terser": "^3.8.1",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   }
 }
